--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,3 +36,8 @@ models:
     # Applies to all files under models/example/
     example:
       materialized: view
+
+models:
+  jaffle_shop:
+    staging:
+      +materialized: view
